# .v20_format

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: datatypes.h  generator.c  generator.h  global_settings.h  makev20.c  parser.c  parser.h
src/generator/: generate_rom.c  generate_rom.h  generator_exceptions.c  generator_exceptions.h  standards.c  standards.h
src/generator/standards/: version_1.c  version_1.h
src/parser/: argument_parser.c  argument_parser.h  flags.c  flags.h  parser_execeptions.c  parser_execeptions.h  parser_validation.c  parser_validation.h
standards/: V20v1.md  vrt_format_1.0.md
vice_wrappers/: v20_loader.ps1  v20_loader.sh
